--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "the inwuerde.de blogsite",
   "main": ".eleventy.js",
   "scripts": {
-    "dev": "npx eleventy --serve"
+    "dev": "npx @11ty/eleventy --serve"
   },
   "repository": {
     "type": "git",
@@ -21,5 +21,8 @@
     "@11ty/eleventy-navigation": "^0.3.3",
     "js-yaml": "^4.1.0",
     "markdown-it": "^13.0.1"
+  },
+  "devDependencies": {
+    "@11ty/eleventy": "^1.0.2"
   }
 }
